--- a/templates/home.html
+++ b/templates/home.html
@@ -1,17 +1,17 @@
 {% extends "base.html" %}
-{% block title %}Labour Studies Index{% endblock %}
+{% block title %}{{ _('Labour Studies Index') }}{% endblock %}
 {%- block content -%}
 <section class="home">
 <p>
-    The <em>Labour Studies Index</em> offers {{ summary.total }}
+    {{ _("The <em>Labour Studies Index</em> offers %(num)d
     citations of journal articles, books, book chapters, theses, and
-    other literature.
+    other literature.", num=summary.total) }}
 </p>
 <section class="authors home_summary">
-<h2>Authors ({{ summary.acnt }})</h2>
+<h2>{{ _('Authors (%(count)d)', count=summary.acnt) }}</h2>
 <table>
   <thead>
-    <tr><th>Author</th><th class="numcites">Number of citations</th></tr>
+    <tr><th>{{ _('Author') }}</th><th class="numcites">{{ _('Number of citations') }}</th></tr>
   </thead>
   <tbody>
 {%- for author in summary.authors %}
@@ -28,10 +28,10 @@
 </table>
 </section>
 <section class="publications home_summary">
-<h2>Publications ({{ summary.pcnt }})</h2>
+<h2>{{ _('Publications (%(count)d)', count=summary.pcnt) }}</h2>
 <table>
   <thead>
-    <tr><th>Publication</th><th class="numcites">Number of citations</th></tr>
+    <tr><th>{{ _('Publication') }}</th><th class="numcites">{{ _('Number of citations') }}</th></tr>
   </thead>
   <tbody>
 {%- for pub in summary.pubs %}
@@ -48,10 +48,10 @@
 </table>
 </section>
 <section class="pubtypes home_summary">
-<h2>Publication types</h2>
+<h2>{{ _('Publication types') }}</h2>
 <table>
   <thead>
-    <tr><th>Type</th><th class="numcites">Number of citations</th></tr>
+    <tr><th>{{ _('Type') }}</th><th class="numcites">{{ _('Number of citations') }}</th></tr>
   </thead>
   <tbody>
 {%- for pub in summary.types %}
@@ -59,7 +59,7 @@
     <td class="pubtype">
       {%- if pub.0 %}
       <a href="{{url_for('filter_citations', facets='doctype:' + pub.0|striptags)}}">
-      {%- endif %}{{ pub.0|striptags }}{%- if pub.0 %}</a>{%- endif %}
+      {%- endif %}{{ _(pub.0|striptags) }}{%- if pub.0 %}</a>{%- endif %}
     </td>
     <td>{{ pub.1 }}</td>
   </tr>
@@ -68,10 +68,10 @@
 </table>
 </section>
 <section class="languages home_summary">
-<h2>Languages</h2>
+<h2>{{ _('Languages') }}</h2>
 <table>
   <thead>
-    <tr><th>Language</th><th class="numcites">Number of citations</th></tr>
+    <tr><th>{{ _('Language') }}</th><th class="numcites">{{ _('Number of citations') }}</th></tr>
   </thead>
   <tbody>
 {%- for pub in summary.languages %}
@@ -84,10 +84,10 @@
 </table>
 </section>
 <section class="series home_summary">
-<h2>Series</h2>
+<h2>{{ _('Series') }}</h2>
 <table>
   <thead>
-    <tr><th>Series title</th><th class="numcites">Number of citations</th></tr>
+    <tr><th>{{ _('Series title') }}</th><th class="numcites">{{ _('Number of citations') }}</th></tr>
   </thead>
   <tbody>
 {%- for pub in summary.series %}
