--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -1,21 +1,21 @@
 {% extends "base.html" %}
-{% block title %}Search results{% endblock %}
+{% block title %}{{ _('Search results') }}{% endblock %}
 {%- block content -%}
 <section class="results">
 <span class="result_count">{{ results.start }} - {{ results.end }} of {{ results.cnt }}</span>
 {%- if results.q %}
     {%- if results.page_next %}
-    <span class="pager"><a href="{{ url_for('search_results', search=results.q, offset=results.page_next, limit=results.limit)}}">Next</a></span>
+    <span class="pager"><a href="{{ url_for('search_results', search=results.q, offset=results.page_next, limit=results.limit)}}">{{ _('Next') }}</a></span>
     {%- endif %}
     {%- if results.page_prev %}
-    <span class="pager"><a href="{{ url_for('search_results', search=results.q, offset=results.page_prev, limit=results.limit)}}">Previous</a></span>
+    <span class="pager"><a href="{{ url_for('search_results', search=results.q, offset=results.page_prev, limit=results.limit)}}">{{ _('Previous') }}</a></span>
     {%- endif %}
 {%- elif results.facets %}
     {%- if results.page_next %}
-    <span class="pager"><a href="{{ url_for('filter_citations', facets=results.facets, offset=results.page_next, limit=results.limit)}}">Next</a></span>
+    <span class="pager"><a href="{{ url_for('filter_citations', facets=results.facets, offset=results.page_next, limit=results.limit)}}">{{ _('Next') }}</a></span>
     {%- endif %}
     {%- if results.page_prev %}
-    <span class="pager"><a href="{{ url_for('filter_citations', facets=results.facets, offset=results.page_prev, limit=results.limit)}}">Previous</a></span>
+    <span class="pager"><a href="{{ url_for('filter_citations', facets=results.facets, offset=results.page_prev, limit=results.limit)}}">{{ _('Previous') }}</a></span>
     {%- endif %}
 {%- endif %}
 {%- for r in results.r %}
