Better support for empty search results
Signed-off-by: Dan Scott <dan@coffeecode.net>

--- a/static/style.css
+++ b/static/style.css
@@ -64,6 +64,9 @@ div.searchbox label {
     color: white;
     padding-left: 1em;
 }
+div.empty {
+    padding-bottom: 5em;
+}
 @media screen and (min-device-width: 1024px) and (min-width: 960px) {
     div.searchbox {
         position: absolute;
