Add a link to presentation to footer
Probably just a temporary measure.

Signed-off-by: Dan Scott <dan@coffeecode.net>

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,7 @@
 {% block content %}{% endblock %}
 <footer class="footer">
 A project of the <a href="http://laurentian.ca/library/">J.N. Desmarais Library</a> at <a href="http://laurentian.ca/">Laurentian University</a>.
+<a style="float:right; font-size: 60%; padding-right: 1em;" href="https://drive.google.com/open?id=1ckkrQzW4KI11U58ODsQFISlOUYI0aXWpUT9_xw019mo&authuser=1">(Presentation)</a>
 </footer>
 </body>
 </html>
