ISSN means Report Number for Reports
In a growing sign of the inadequacy of the RIS output format, the ISSN/ISBN
field is used for report number when the document type is Report.

Fixes #38.

Signed-off-by: Dan Scott <dan@coffeecode.net>

--- a/templates/citation.html
+++ b/templates/citation.html
@@ -108,8 +108,13 @@
 </tr>
 {%- elif record.isbn_issn and record.pub_venue == 'Periodical' %}
 <tr resource="#pub_venue">
-  <th>ISSN</th>
-  <td property="issn">{{ record.isbn_issn|escape }}</td>
+  <th>{%- if record.doc_type_human == 'Report' -%}
+        Report number
+    {%- else -%}
+        ISSN
+    {%- endif -%}
+  </th>
+  <td{% if record.doc_type_human != 'Report' %} property="issn"{% endif %}>{{ record.isbn_issn|escape }}</td>
 </tr>
 {%- endif %}
 {%- if record.start_page %}
