--- a/templates/base.html
+++ b/templates/base.html
@@ -10,12 +10,14 @@
 <body>
 <header>
 <div class="header">
-    <a href="{{ url_for('home_html')}}"</a>{{ _('Labour Studies Index') }}</a>
+    <a href="{{ url_for('home_html', lang=_('en')) }}"</a>{{ _('Labour Studies Index') }}</a>
 </div>
 <div class="searchbox">
-    <form action="{{ url_for('search_bar') }}">
+    <form action="{{ url_for('search_bar', lang=_('en')) }}">
         <label>{{ _('Search: ') }}<input type="search" name="s" autocomplete="on"></input></label>
         <input type="submit" value="{{ _('Submit') }}" />
+        
+        <a style="color: #FFF; margin-left: 3em;" href="{{ url_for('home_html', lang=_('fr')) }}">{{ _('Français') }}</a>
     </form>
 </div>
 </header>
