Display authors, editors, translators again
The author block had a slightly reversed bit of logic. This should
fix #42.

Signed-off-by: Dan Scott <dan@coffeecode.net>

--- a/templates/citation.html
+++ b/templates/citation.html
@@ -38,7 +38,7 @@
     }}">{{ _(record.doc_type_human|escape) }}</a></td>
 </tr>
 {%- endif %}
-{%- if record.authors|length < 0 %}
+{%- if record.authors|length > 0 %}
 {%-     for author in record.authors %} 
 {%-         if author.author_type == 'author': %}
     {{ author_block(author, 'Author', 'author') }}
