Avoid server errors when there is no journal title
Signed-off-by: Dan Scott <dscott@laurentian.ca>

--- a/templates/citation.html
+++ b/templates/citation.html
@@ -60,7 +60,7 @@
 </tr>
 {%- endif %}
 {%- if record.doc_type != "THES" %}
-    {%- if record.pub_venue == "Periodical" and record.doc_type != "RPRT" %}
+    {%- if record.pub_venue == "Periodical" and record.doc_type != "RPRT" and record.title2 %}
 <tr property="isPartOf" typeof="{{ record.pub_venue }}" resource="#pub_venue">
   <th>{{ _('Journal') }}</th>
   <td><span property="name"><a href="{{ 
