--- a/static/style.css
+++ b/static/style.css
@@ -11,6 +11,13 @@ header, footer {
     color: white;
     text-decoration: none;
 }
+.header h1 {
+  display: inline;
+  font-size: 100%;
+}
+.updated {
+  padding-left: 2em;
+}
 a { text-decoration: none; }
 body { 
     margin: 0px;
@@ -79,9 +86,11 @@ div.empty {
         top: 1em;
         right: 1em;
     }
-    div.header {
-        padding: 1em;
-        font-size: 160%;
+    .header {
+      padding: 1em;
+    }
+    .header h1 {
+      font-size: 160%;
     }
     section.home_summary {
         padding-left: 2em;
