--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
 <body>
 <header>
 <div class="header">
-    <a href="{{ url_for('home_html', lang=_('en')) }}"</a>{{ _('Labour Studies Index') }}</a>
+  <h1><a href="{{ url_for('home_html', lang=_('en')) }}"</a>{{ _('Labour Studies Index') }}</a></h1><span class="updated">{{ _('Updated: %(update)s', update='2019-04-26') }}</span>
 </div>
 <div class="searchbox">
     <form action="{{ url_for('search_bar', lang=_('en')) }}">
