Express RIS format as an alternate link element
In theory Zotero should be able to detect the link by
mime-type and offer to save the full citation accordingly...

Signed-off-by: Dan Scott <dan@coffeecode.net>

--- a/templates/citation.html
+++ b/templates/citation.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block title %}{{ _('Citation: ') }}{{ record.title|escape }}{% endblock %}
+{% block header %}<link rel="alternate" type="application/x-research-info-systems" title="RIS citation" href="https://api.zotero.org/groups/290262/items/{{ record.zotero_key|escape }}?v=3&amp;format=ris">{% endblock %}
 {%- macro author_block(author, heading, sprop) -%}
 <tr>
   <th>{{ heading }}</th>
