--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
+{% block header %}{% endblock %}
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="shortcut icon" sizes="196x196" href="/favicon-196.png">
 <link rel="apple-touch-icon-precomposed" href="/favicon-152.png">
